// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PipelineProgressPanel > matches snapshot in dark mode 1`] = `
<div>
  <div
    class="dark bg-slate-900 p-4"
  >
    <div
      class="glass-card rounded-xl text-card-foreground transition-neo hover-lift w-full"
    >
      <div
        class="flex flex-col p-6 space-y-3 pb-4"
      >
        <div
          class="flex flex-wrap items-center justify-between gap-3"
        >
          <div
            class="flex flex-col gap-1"
          >
            <h3
              class="heading-md font-display tracking-tight text-foreground text-base font-semibold"
            >
              AI Personalization
            </h3>
            <div
              class="flex flex-wrap items-center gap-2 text-xs text-muted-foreground"
            >
              <span
                class="font-medium text-foreground"
              >
                80
                % complete
              </span>
              <span
                class="inline-flex items-center gap-1 rounded-full bg-muted px-2 py-1 text-[11px] font-medium"
              >
                <svg
                  class="lucide lucide-sparkles h-3 w-3 text-amber-500"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z"
                  />
                  <path
                    d="M20 3v4"
                  />
                  <path
                    d="M22 5h-4"
                  />
                  <path
                    d="M4 17v2"
                  />
                  <path
                    d="M5 18H3"
                  />
                </svg>
                AI personalization
              </span>
            </div>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <div
              class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent hover:bg-primary/80 text-[11px] bg-emerald-100 text-emerald-700 dark:bg-emerald-950/40 dark:text-emerald-200"
            >
              Healthy
            </div>
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-neo focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 shadow-soft-outer hover:bg-accent/20 hover:text-accent-foreground backdrop-blur-sm rounded-md h-8 px-2"
            >
              Expand
              <svg
                class="lucide lucide-chevron-down ml-1 h-3.5 w-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          aria-live="polite"
          class="sr-only"
        >
          Pipeline stage 
          AI Personalization
        </div>
      </div>
      <div
        class="p-6 space-y-6 pt-0"
      >
        <div
          class="flex flex-col gap-4"
        >
          <div
            class="flex flex-wrap items-center gap-4 md:flex-1"
          >
            <div
              class="flex items-center gap-4"
            >
              <div
                class="flex min-w-[70px] flex-col items-center gap-2 text-center"
              >
                <button
                  class="relative flex h-12 w-12 items-center justify-center rounded-full border-2 text-sm font-semibold transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-genniBlue focus-visible:ring-offset-2 disabled:cursor-default border-emerald-500 bg-emerald-500 text-white"
                  disabled=""
                  style="box-shadow: 0 0 0 0 rgba(0,0,0,0); transform: none;"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    class="lucide lucide-check h-5 w-5"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 6 9 17l-5-5"
                    />
                  </svg>
                </button>
                <span
                  class="text-xs font-medium text-emerald-600"
                >
                  Choose Data Source
                </span>
              </div>
              <div
                aria-hidden="true"
                class="h-0.5 w-10 rounded-full transition-all md:w-14 bg-gradient-to-r from-genniBlue via-genniIndigo to-genniRose"
              />
            </div>
            <div
              class="flex items-center gap-4"
            >
              <div
                class="flex min-w-[70px] flex-col items-center gap-2 text-center"
              >
                <button
                  class="relative flex h-12 w-12 items-center justify-center rounded-full border-2 text-sm font-semibold transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-genniBlue focus-visible:ring-offset-2 disabled:cursor-default border-emerald-500 bg-emerald-500 text-white"
                  disabled=""
                  style="box-shadow: 0 0 0 0 rgba(0,0,0,0); transform: none;"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    class="lucide lucide-check h-5 w-5"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 6 9 17l-5-5"
                    />
                  </svg>
                </button>
                <span
                  class="text-xs font-medium text-emerald-600"
                >
                  Discover Leads
                </span>
              </div>
              <div
                aria-hidden="true"
                class="h-0.5 w-10 rounded-full transition-all md:w-14 bg-gradient-to-r from-genniBlue via-genniIndigo to-genniRose"
              />
            </div>
            <div
              class="flex items-center gap-4"
            >
              <div
                class="flex min-w-[70px] flex-col items-center gap-2 text-center"
              >
                <button
                  class="relative flex h-12 w-12 items-center justify-center rounded-full border-2 text-sm font-semibold transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-genniBlue focus-visible:ring-offset-2 disabled:cursor-default border-emerald-500 bg-emerald-500 text-white"
                  disabled=""
                  style="box-shadow: 0 0 0 0 rgba(0,0,0,0); transform: none;"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    class="lucide lucide-check h-5 w-5"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 6 9 17l-5-5"
                    />
                  </svg>
                </button>
                <span
                  class="text-xs font-medium text-emerald-600"
                >
                  Enrich Data
                </span>
              </div>
              <div
                aria-hidden="true"
                class="h-0.5 w-10 rounded-full transition-all md:w-14 bg-gradient-to-r from-genniBlue via-genniIndigo to-genniRose"
              />
            </div>
            <div
              class="flex items-center gap-4"
            >
              <div
                class="flex min-w-[70px] flex-col items-center gap-2 text-center"
              >
                <button
                  aria-current="step"
                  class="relative flex h-12 w-12 items-center justify-center rounded-full border-2 bg-white text-sm font-semibold transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-genniBlue focus-visible:ring-offset-2 disabled:cursor-default border-genniBlue text-genniBlue"
                  disabled=""
                  style="box-shadow: 0 0 0 6px rgba(34, 197, 94, 0.14); transform: scale(1.05);"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    class="lucide lucide-sparkles h-5 w-5"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z"
                    />
                    <path
                      d="M20 3v4"
                    />
                    <path
                      d="M22 5h-4"
                    />
                    <path
                      d="M4 17v2"
                    />
                    <path
                      d="M5 18H3"
                    />
                  </svg>
                </button>
                <span
                  class="text-xs font-medium text-genniBlue"
                >
                  AI Personalization
                </span>
              </div>
              <div
                aria-hidden="true"
                class="h-0.5 w-10 rounded-full transition-all md:w-14 bg-slate-200/60"
              />
            </div>
            <div
              class="flex items-center gap-4"
            >
              <div
                class="flex min-w-[70px] flex-col items-center gap-2 text-center"
              >
                <button
                  class="relative flex h-12 w-12 items-center justify-center rounded-full border-2 bg-white text-sm font-semibold transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-genniBlue focus-visible:ring-offset-2 disabled:cursor-default border-slate-200/70 text-slate-400"
                  disabled=""
                  style="box-shadow: 0 0 0 0 rgba(0,0,0,0); transform: none;"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    class="lucide lucide-download h-5 w-5"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
                    />
                    <polyline
                      points="7 10 12 15 17 10"
                    />
                    <line
                      x1="12"
                      x2="12"
                      y1="15"
                      y2="3"
                    />
                  </svg>
                </button>
                <span
                  class="text-xs font-medium text-slate-500"
                >
                  Review & Export
                </span>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            class="mb-2 flex items-center gap-2 text-sm font-medium text-muted-foreground"
          >
            <svg
              class="lucide lucide-activity h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22 12h-2.48a2 2 0 0 0-1.93 1.46l-2.35 8.36a.25.25 0 0 1-.48 0L9.24 2.18a.25.25 0 0 0-.48 0l-2.35 8.36A2 2 0 0 1 4.49 12H2"
              />
            </svg>
             Live metrics
          </div>
          <div
            class="grid grid-cols-2 gap-4 md:grid-cols-4"
          >
            <div
              class="flex items-center gap-2 rounded-lg border border-border/60 bg-muted/30 p-3"
            >
              <span
                class="rounded-full bg-background p-2 text-blue-500"
              >
                <svg
                  class="lucide lucide-search h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="11"
                    cy="11"
                    r="8"
                  />
                  <path
                    d="m21 21-4.3-4.3"
                  />
                </svg>
              </span>
              <div>
                <div
                  class="text-lg font-semibold"
                >
                  10
                </div>
                <div
                  class="text-xs text-muted-foreground"
                >
                  Discovered
                </div>
              </div>
            </div>
            <div
              class="flex items-center gap-2 rounded-lg border border-border/60 bg-muted/30 p-3"
            >
              <span
                class="rounded-full bg-background p-2 text-emerald-500"
              >
                <svg
                  class="lucide lucide-users h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
                  />
                  <circle
                    cx="9"
                    cy="7"
                    r="4"
                  />
                  <path
                    d="M22 21v-2a4 4 0 0 0-3-3.87"
                  />
                  <path
                    d="M16 3.13a4 4 0 0 1 0 7.75"
                  />
                </svg>
              </span>
              <div>
                <div
                  class="text-lg font-semibold"
                >
                  5
                </div>
                <div
                  class="text-xs text-muted-foreground"
                >
                  Enriched
                </div>
              </div>
            </div>
            <div
              class="flex items-center gap-2 rounded-lg border border-border/60 bg-muted/30 p-3"
            >
              <span
                class="rounded-full bg-background p-2 text-purple-500"
              >
                <svg
                  class="lucide lucide-bot h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 8V4H8"
                  />
                  <rect
                    height="12"
                    rx="2"
                    width="16"
                    x="4"
                    y="8"
                  />
                  <path
                    d="M2 14h2"
                  />
                  <path
                    d="M20 14h2"
                  />
                  <path
                    d="M15 13v2"
                  />
                  <path
                    d="M9 13v2"
                  />
                </svg>
              </span>
              <div>
                <div
                  class="text-lg font-semibold"
                >
                  2
                </div>
                <div
                  class="text-xs text-muted-foreground"
                >
                  Analyzed
                </div>
              </div>
            </div>
            <div
              class="flex items-center gap-2 rounded-lg border border-border/60 bg-muted/30 p-3"
            >
              <span
                class="rounded-full bg-background p-2 text-slate-500"
              >
                <svg
                  class="lucide lucide-activity h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M22 12h-2.48a2 2 0 0 0-1.93 1.46l-2.35 8.36a.25.25 0 0 1-.48 0L9.24 2.18a.25.25 0 0 0-.48 0l-2.35 8.36A2 2 0 0 1 4.49 12H2"
                  />
                </svg>
              </span>
              <div>
                <div
                  class="text-lg font-semibold"
                >
                  20
                </div>
                <div
                  class="text-xs text-muted-foreground"
                >
                  Target
                </div>
              </div>
            </div>
            <div
              class="flex items-center gap-2 rounded-lg border border-border/60 bg-muted/30 p-3"
            >
              <span
                class="rounded-full bg-background p-2 text-amber-500"
              >
                <svg
                  class="lucide lucide-sparkles h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z"
                  />
                  <path
                    d="M20 3v4"
                  />
                  <path
                    d="M22 5h-4"
                  />
                  <path
                    d="M4 17v2"
                  />
                  <path
                    d="M5 18H3"
                  />
                </svg>
              </span>
              <div>
                <div
                  class="text-lg font-semibold"
                >
                  72%
                </div>
                <div
                  class="text-xs text-muted-foreground"
                >
                  Confidence
                </div>
              </div>
            </div>
            <div
              class="flex items-center gap-2 rounded-lg border border-border/60 bg-muted/30 p-3"
            >
              <span
                class="rounded-full bg-background p-2 text-indigo-500"
              >
                <svg
                  class="lucide lucide-timer h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="10"
                    x2="14"
                    y1="2"
                    y2="2"
                  />
                  <line
                    x1="12"
                    x2="15"
                    y1="14"
                    y2="11"
                  />
                  <circle
                    cx="12"
                    cy="14"
                    r="8"
                  />
                </svg>
              </span>
              <div>
                <div
                  class="text-lg font-semibold"
                >
                  12
                </div>
                <div
                  class="text-xs text-muted-foreground"
                >
                  Credits
                </div>
              </div>
            </div>
            <div
              class="flex items-center gap-2 rounded-lg border border-border/60 bg-muted/30 p-3"
            >
              <span
                class="rounded-full bg-background p-2 text-cyan-500"
              >
                <svg
                  class="lucide lucide-database h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <ellipse
                    cx="12"
                    cy="5"
                    rx="9"
                    ry="3"
                  />
                  <path
                    d="M3 5V19A9 3 0 0 0 21 19V5"
                  />
                  <path
                    d="M3 12A9 3 0 0 0 21 12"
                  />
                </svg>
              </span>
              <div>
                <div
                  class="text-lg font-semibold"
                >
                  3
                </div>
                <div
                  class="text-xs text-muted-foreground"
                >
                  Sources
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="space-y-3 hidden"
        >
          <div
            class="flex items-center justify-between"
          >
            <div
              class="flex items-center gap-2 text-sm font-medium text-muted-foreground"
            >
              <svg
                class="lucide lucide-timer h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <line
                  x1="10"
                  x2="14"
                  y1="2"
                  y2="2"
                />
                <line
                  x1="12"
                  x2="15"
                  y1="14"
                  y2="11"
                />
                <circle
                  cx="12"
                  cy="14"
                  r="8"
                />
              </svg>
              Recent activity
            </div>
            <span
              class="text-xs text-muted-foreground"
            >
              Showing latest 
              1
               updates
            </span>
          </div>
          <div
            class="shrink-0 bg-border h-[1px] w-full"
            data-orientation="horizontal"
            role="none"
          />
          <div
            class="relative overflow-hidden max-h-64"
            dir="ltr"
            style="position: relative; --radix-scroll-area-corner-width: 0px; --radix-scroll-area-corner-height: 0px;"
          >
            <style>
              [data-radix-scroll-area-viewport]{scrollbar-width:none;-ms-overflow-style:none;-webkit-overflow-scrolling:touch;}[data-radix-scroll-area-viewport]::-webkit-scrollbar{display:none}
            </style>
            <div
              class="h-full w-full rounded-[inherit]"
              data-radix-scroll-area-viewport=""
              style="overflow-x: hidden; overflow-y: scroll;"
            >
              <div
                style="min-width: 100%; display: table;"
              >
                <ol
                  class="space-y-3 pr-2"
                >
                  <li
                    class="rounded-lg border border-border/60 bg-background/80 p-3 shadow-sm"
                  >
                    <div
                      class="flex items-center justify-between gap-2"
                    >
                      <div
                        class="flex items-center gap-2"
                      >
                        <div
                          class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground text-[10px] uppercase"
                        >
                          AI Personalization
                        </div>
                        <div
                          class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80 text-[10px]"
                        >
                          normal
                        </div>
                      </div>
                      <span
                        class="text-xs text-muted-foreground"
                      >
                        Just now
                      </span>
                    </div>
                    <p
                      class="mt-2 text-sm font-medium text-foreground"
                    >
                      AI personalization
                    </p>
                    <p
                      class="text-xs text-muted-foreground"
                    >
                      Working on analysis
                    </p>
                  </li>
                </ol>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PipelineProgressPanel > matches snapshot in light mode 1`] = `
<div>
  <div
    class="p-4"
  >
    <div
      class="glass-card rounded-xl text-card-foreground transition-neo hover-lift w-full"
    >
      <div
        class="flex flex-col p-6 space-y-3 pb-4"
      >
        <div
          class="flex flex-wrap items-center justify-between gap-3"
        >
          <div
            class="flex flex-col gap-1"
          >
            <h3
              class="heading-md font-display tracking-tight text-foreground text-base font-semibold"
            >
              AI Personalization
            </h3>
            <div
              class="flex flex-wrap items-center gap-2 text-xs text-muted-foreground"
            >
              <span
                class="font-medium text-foreground"
              >
                80
                % complete
              </span>
              <span
                class="inline-flex items-center gap-1 rounded-full bg-muted px-2 py-1 text-[11px] font-medium"
              >
                <svg
                  class="lucide lucide-sparkles h-3 w-3 text-amber-500"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z"
                  />
                  <path
                    d="M20 3v4"
                  />
                  <path
                    d="M22 5h-4"
                  />
                  <path
                    d="M4 17v2"
                  />
                  <path
                    d="M5 18H3"
                  />
                </svg>
                AI personalization
              </span>
            </div>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <div
              class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent hover:bg-primary/80 text-[11px] bg-emerald-100 text-emerald-700 dark:bg-emerald-950/40 dark:text-emerald-200"
            >
              Healthy
            </div>
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-neo focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 shadow-soft-outer hover:bg-accent/20 hover:text-accent-foreground backdrop-blur-sm rounded-md h-8 px-2"
            >
              Expand
              <svg
                class="lucide lucide-chevron-down ml-1 h-3.5 w-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          aria-live="polite"
          class="sr-only"
        >
          Pipeline stage 
          AI Personalization
        </div>
      </div>
      <div
        class="p-6 space-y-6 pt-0"
      >
        <div
          class="flex flex-col gap-4"
        >
          <div
            class="flex flex-wrap items-center gap-4 md:flex-1"
          >
            <div
              class="flex items-center gap-4"
            >
              <div
                class="flex min-w-[70px] flex-col items-center gap-2 text-center"
              >
                <button
                  class="relative flex h-12 w-12 items-center justify-center rounded-full border-2 text-sm font-semibold transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-genniBlue focus-visible:ring-offset-2 disabled:cursor-default border-emerald-500 bg-emerald-500 text-white"
                  disabled=""
                  style="box-shadow: 0 0 0 0 rgba(0,0,0,0); transform: none;"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    class="lucide lucide-check h-5 w-5"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 6 9 17l-5-5"
                    />
                  </svg>
                </button>
                <span
                  class="text-xs font-medium text-emerald-600"
                >
                  Choose Data Source
                </span>
              </div>
              <div
                aria-hidden="true"
                class="h-0.5 w-10 rounded-full transition-all md:w-14 bg-gradient-to-r from-genniBlue via-genniIndigo to-genniRose"
              />
            </div>
            <div
              class="flex items-center gap-4"
            >
              <div
                class="flex min-w-[70px] flex-col items-center gap-2 text-center"
              >
                <button
                  class="relative flex h-12 w-12 items-center justify-center rounded-full border-2 text-sm font-semibold transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-genniBlue focus-visible:ring-offset-2 disabled:cursor-default border-emerald-500 bg-emerald-500 text-white"
                  disabled=""
                  style="box-shadow: 0 0 0 0 rgba(0,0,0,0); transform: none;"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    class="lucide lucide-check h-5 w-5"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 6 9 17l-5-5"
                    />
                  </svg>
                </button>
                <span
                  class="text-xs font-medium text-emerald-600"
                >
                  Discover Leads
                </span>
              </div>
              <div
                aria-hidden="true"
                class="h-0.5 w-10 rounded-full transition-all md:w-14 bg-gradient-to-r from-genniBlue via-genniIndigo to-genniRose"
              />
            </div>
            <div
              class="flex items-center gap-4"
            >
              <div
                class="flex min-w-[70px] flex-col items-center gap-2 text-center"
              >
                <button
                  class="relative flex h-12 w-12 items-center justify-center rounded-full border-2 text-sm font-semibold transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-genniBlue focus-visible:ring-offset-2 disabled:cursor-default border-emerald-500 bg-emerald-500 text-white"
                  disabled=""
                  style="box-shadow: 0 0 0 0 rgba(0,0,0,0); transform: none;"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    class="lucide lucide-check h-5 w-5"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 6 9 17l-5-5"
                    />
                  </svg>
                </button>
                <span
                  class="text-xs font-medium text-emerald-600"
                >
                  Enrich Data
                </span>
              </div>
              <div
                aria-hidden="true"
                class="h-0.5 w-10 rounded-full transition-all md:w-14 bg-gradient-to-r from-genniBlue via-genniIndigo to-genniRose"
              />
            </div>
            <div
              class="flex items-center gap-4"
            >
              <div
                class="flex min-w-[70px] flex-col items-center gap-2 text-center"
              >
                <button
                  aria-current="step"
                  class="relative flex h-12 w-12 items-center justify-center rounded-full border-2 bg-white text-sm font-semibold transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-genniBlue focus-visible:ring-offset-2 disabled:cursor-default border-genniBlue text-genniBlue"
                  disabled=""
                  style="box-shadow: 0 0 0 6px rgba(34, 197, 94, 0.14); transform: scale(1.05);"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    class="lucide lucide-sparkles h-5 w-5"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z"
                    />
                    <path
                      d="M20 3v4"
                    />
                    <path
                      d="M22 5h-4"
                    />
                    <path
                      d="M4 17v2"
                    />
                    <path
                      d="M5 18H3"
                    />
                  </svg>
                </button>
                <span
                  class="text-xs font-medium text-genniBlue"
                >
                  AI Personalization
                </span>
              </div>
              <div
                aria-hidden="true"
                class="h-0.5 w-10 rounded-full transition-all md:w-14 bg-slate-200/60"
              />
            </div>
            <div
              class="flex items-center gap-4"
            >
              <div
                class="flex min-w-[70px] flex-col items-center gap-2 text-center"
              >
                <button
                  class="relative flex h-12 w-12 items-center justify-center rounded-full border-2 bg-white text-sm font-semibold transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-genniBlue focus-visible:ring-offset-2 disabled:cursor-default border-slate-200/70 text-slate-400"
                  disabled=""
                  style="box-shadow: 0 0 0 0 rgba(0,0,0,0); transform: none;"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    class="lucide lucide-download h-5 w-5"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
                    />
                    <polyline
                      points="7 10 12 15 17 10"
                    />
                    <line
                      x1="12"
                      x2="12"
                      y1="15"
                      y2="3"
                    />
                  </svg>
                </button>
                <span
                  class="text-xs font-medium text-slate-500"
                >
                  Review & Export
                </span>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            class="mb-2 flex items-center gap-2 text-sm font-medium text-muted-foreground"
          >
            <svg
              class="lucide lucide-activity h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22 12h-2.48a2 2 0 0 0-1.93 1.46l-2.35 8.36a.25.25 0 0 1-.48 0L9.24 2.18a.25.25 0 0 0-.48 0l-2.35 8.36A2 2 0 0 1 4.49 12H2"
              />
            </svg>
             Live metrics
          </div>
          <div
            class="grid grid-cols-2 gap-4 md:grid-cols-4"
          >
            <div
              class="flex items-center gap-2 rounded-lg border border-border/60 bg-muted/30 p-3"
            >
              <span
                class="rounded-full bg-background p-2 text-blue-500"
              >
                <svg
                  class="lucide lucide-search h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="11"
                    cy="11"
                    r="8"
                  />
                  <path
                    d="m21 21-4.3-4.3"
                  />
                </svg>
              </span>
              <div>
                <div
                  class="text-lg font-semibold"
                >
                  10
                </div>
                <div
                  class="text-xs text-muted-foreground"
                >
                  Discovered
                </div>
              </div>
            </div>
            <div
              class="flex items-center gap-2 rounded-lg border border-border/60 bg-muted/30 p-3"
            >
              <span
                class="rounded-full bg-background p-2 text-emerald-500"
              >
                <svg
                  class="lucide lucide-users h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
                  />
                  <circle
                    cx="9"
                    cy="7"
                    r="4"
                  />
                  <path
                    d="M22 21v-2a4 4 0 0 0-3-3.87"
                  />
                  <path
                    d="M16 3.13a4 4 0 0 1 0 7.75"
                  />
                </svg>
              </span>
              <div>
                <div
                  class="text-lg font-semibold"
                >
                  5
                </div>
                <div
                  class="text-xs text-muted-foreground"
                >
                  Enriched
                </div>
              </div>
            </div>
            <div
              class="flex items-center gap-2 rounded-lg border border-border/60 bg-muted/30 p-3"
            >
              <span
                class="rounded-full bg-background p-2 text-purple-500"
              >
                <svg
                  class="lucide lucide-bot h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 8V4H8"
                  />
                  <rect
                    height="12"
                    rx="2"
                    width="16"
                    x="4"
                    y="8"
                  />
                  <path
                    d="M2 14h2"
                  />
                  <path
                    d="M20 14h2"
                  />
                  <path
                    d="M15 13v2"
                  />
                  <path
                    d="M9 13v2"
                  />
                </svg>
              </span>
              <div>
                <div
                  class="text-lg font-semibold"
                >
                  2
                </div>
                <div
                  class="text-xs text-muted-foreground"
                >
                  Analyzed
                </div>
              </div>
            </div>
            <div
              class="flex items-center gap-2 rounded-lg border border-border/60 bg-muted/30 p-3"
            >
              <span
                class="rounded-full bg-background p-2 text-slate-500"
              >
                <svg
                  class="lucide lucide-activity h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M22 12h-2.48a2 2 0 0 0-1.93 1.46l-2.35 8.36a.25.25 0 0 1-.48 0L9.24 2.18a.25.25 0 0 0-.48 0l-2.35 8.36A2 2 0 0 1 4.49 12H2"
                  />
                </svg>
              </span>
              <div>
                <div
                  class="text-lg font-semibold"
                >
                  20
                </div>
                <div
                  class="text-xs text-muted-foreground"
                >
                  Target
                </div>
              </div>
            </div>
            <div
              class="flex items-center gap-2 rounded-lg border border-border/60 bg-muted/30 p-3"
            >
              <span
                class="rounded-full bg-background p-2 text-amber-500"
              >
                <svg
                  class="lucide lucide-sparkles h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z"
                  />
                  <path
                    d="M20 3v4"
                  />
                  <path
                    d="M22 5h-4"
                  />
                  <path
                    d="M4 17v2"
                  />
                  <path
                    d="M5 18H3"
                  />
                </svg>
              </span>
              <div>
                <div
                  class="text-lg font-semibold"
                >
                  72%
                </div>
                <div
                  class="text-xs text-muted-foreground"
                >
                  Confidence
                </div>
              </div>
            </div>
            <div
              class="flex items-center gap-2 rounded-lg border border-border/60 bg-muted/30 p-3"
            >
              <span
                class="rounded-full bg-background p-2 text-indigo-500"
              >
                <svg
                  class="lucide lucide-timer h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="10"
                    x2="14"
                    y1="2"
                    y2="2"
                  />
                  <line
                    x1="12"
                    x2="15"
                    y1="14"
                    y2="11"
                  />
                  <circle
                    cx="12"
                    cy="14"
                    r="8"
                  />
                </svg>
              </span>
              <div>
                <div
                  class="text-lg font-semibold"
                >
                  12
                </div>
                <div
                  class="text-xs text-muted-foreground"
                >
                  Credits
                </div>
              </div>
            </div>
            <div
              class="flex items-center gap-2 rounded-lg border border-border/60 bg-muted/30 p-3"
            >
              <span
                class="rounded-full bg-background p-2 text-cyan-500"
              >
                <svg
                  class="lucide lucide-database h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <ellipse
                    cx="12"
                    cy="5"
                    rx="9"
                    ry="3"
                  />
                  <path
                    d="M3 5V19A9 3 0 0 0 21 19V5"
                  />
                  <path
                    d="M3 12A9 3 0 0 0 21 12"
                  />
                </svg>
              </span>
              <div>
                <div
                  class="text-lg font-semibold"
                >
                  3
                </div>
                <div
                  class="text-xs text-muted-foreground"
                >
                  Sources
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="space-y-3 hidden"
        >
          <div
            class="flex items-center justify-between"
          >
            <div
              class="flex items-center gap-2 text-sm font-medium text-muted-foreground"
            >
              <svg
                class="lucide lucide-timer h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <line
                  x1="10"
                  x2="14"
                  y1="2"
                  y2="2"
                />
                <line
                  x1="12"
                  x2="15"
                  y1="14"
                  y2="11"
                />
                <circle
                  cx="12"
                  cy="14"
                  r="8"
                />
              </svg>
              Recent activity
            </div>
            <span
              class="text-xs text-muted-foreground"
            >
              Showing latest 
              1
               updates
            </span>
          </div>
          <div
            class="shrink-0 bg-border h-[1px] w-full"
            data-orientation="horizontal"
            role="none"
          />
          <div
            class="relative overflow-hidden max-h-64"
            dir="ltr"
            style="position: relative; --radix-scroll-area-corner-width: 0px; --radix-scroll-area-corner-height: 0px;"
          >
            <style>
              [data-radix-scroll-area-viewport]{scrollbar-width:none;-ms-overflow-style:none;-webkit-overflow-scrolling:touch;}[data-radix-scroll-area-viewport]::-webkit-scrollbar{display:none}
            </style>
            <div
              class="h-full w-full rounded-[inherit]"
              data-radix-scroll-area-viewport=""
              style="overflow-x: hidden; overflow-y: scroll;"
            >
              <div
                style="min-width: 100%; display: table;"
              >
                <ol
                  class="space-y-3 pr-2"
                >
                  <li
                    class="rounded-lg border border-border/60 bg-background/80 p-3 shadow-sm"
                  >
                    <div
                      class="flex items-center justify-between gap-2"
                    >
                      <div
                        class="flex items-center gap-2"
                      >
                        <div
                          class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground text-[10px] uppercase"
                        >
                          AI Personalization
                        </div>
                        <div
                          class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80 text-[10px]"
                        >
                          normal
                        </div>
                      </div>
                      <span
                        class="text-xs text-muted-foreground"
                      >
                        Just now
                      </span>
                    </div>
                    <p
                      class="mt-2 text-sm font-medium text-foreground"
                    >
                      AI personalization
                    </p>
                    <p
                      class="text-xs text-muted-foreground"
                    >
                      Working on analysis
                    </p>
                  </li>
                </ol>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
